# comparisons-rten

./: .gitignore  README.md  pyrightconfig.json
whisper/: README.md  fp16_quant.py  quant.py
whisper/whisper-py/: main.py  requierements.txt  requirements.txt
whisper/whisper-py/src/: audio.py  decode.py  languages.py  tokenizer.py  utils.py
whisper/whisper-rs/: Cargo.toml
whisper/whisper-rs/src/: main.rs
whisper/whisper-rs/src/whisper/: audio.rs  mod.rs  utils.rs
