[package]
name = "whisper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
hound = "3.5.1"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
rayon = "1.8.0"
rten = { path = "/Users/robert/projects/rten" }
rten-tensor = { path = "/Users/robert/projects/rten/rten-tensor" }
rten-generate = { path = "/Users/robert/projects/rten/rten-generate" }
rustc-hash = "1.1.0"
rustfft = "6.1.0"
tiktoken-rs = "0.5.3"
